# 3ds-dev-labs

./: .gitignore  README.md
3ds-environment-setup/: environment.md
3ds-hello-world/: 3ds-hello-world.3dsx  3ds-hello-world.elf  CMakeLists.txt  simple-program.md
3ds-hello-world/app/: 3ds-hello-world.cia  3ds-hello-world.cxi  3ds-hello-world.rsf  3ds-hello-world.smdh  myapp.3dsx  myapp.cia  myapp.cxi  myapp.elf  myapp.smdh
3ds-hello-world/source/: main.cpp
